--- a/consesionaria/src/main/resources/templates/alta.html
+++ b/consesionaria/src/main/resources/templates/alta.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="es">
 
 <head>
     <meta charset="ISO-8859-1">
-    <title>Concesionaria</title>
+    <title>Alta auto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="/css/formulario.css"> -->
 </head>
 
 <body>
-<header <i class="fa fa-align-center" aria-hidden="true"><h2>ESTE ES EL INDEX</h2></i></header>
+    <header><h2>Carga el auto acá</h2>
+    </header>
 
+    <form action="/auto/crear" method="post">
+
+        <input type="text" name="modelo" placeholder="Nombre del modelo">
+        <input type="text" name="marca" placeholder="Marca">
+        <input type="text" name="color" placeholder="Color">
+        <input type="text" name="patente" placeholder="Patente">
+        <input type="number" name="cantidadPuertas" placeholder="Cantidad de puertas">
+        <button type="submit">Subir</button>
+
+    </form>
 
 
 
