--- a/consesionaria/src/main/resources/templates/alta.html
+++ b/consesionaria/src/main/resources/templates/alta.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <header><h2>Carga el auto acá</h2>
+    <header>
+        <h2>Carga el auto acá</h2>
     </header>
 
     <form action="/auto/crear" method="post">
