--- a/consesionaria/src/main/resources/templates/auto_modificar.html
+++ b/consesionaria/src/main/resources/templates/auto_modificar.html
@@ -13,14 +13,22 @@
         <h2>Carga el auto acá</h2>
     </header>
 
-    <form th:action="@{/auto/cambiar/__${auto.id}__" method="post">
+    <form th:action="@{/auto/cambiar/__${auto.id}__}" method="post">
 
-        <input type="text" name="modelo" placeholder="Nombre del modelo">
-        <input type="text" name="marca" placeholder="Marca">
-        <input type="text" name="color" placeholder="Color">
-        <input type="text" name="patente" placeholder="Patente">
-        <input type="number" name="cantidadPuertas" placeholder="Cantidad de puertas">
-        <button type="submit">Subir</button>
+
+        <input hidden th:value="${id}" name="id" type="text">
+
+        <div>
+            <label>Modificar Auto</label>
+            <input th:value="${auto.modelo}" type="text" name="modelo">
+            <input th:value="${auto.marca}" type="text" name="marca">
+            <input th:value="${auto.color}" type="text" name="color">
+            <input th:value="${auto.patente}" type="text" name="patente">
+            <input th:value="${auto.cantidadPuertas}" type="number" name="cantidad de puertas">
+
+        </div>
+
+        <button type="submit">Actualizar</button>
 
 
 
