--- a/consesionaria/src/main/resources/templates/lista.html
+++ b/consesionaria/src/main/resources/templates/lista.html
@@ -31,7 +31,7 @@
                 <td th:text="${auti.patente}"></td>
                 <td th:text="${auti.cantidadPuertas}"></td>
                 <td>
-                    <a th:href="@{/auto/modificar...}"><i></i>Modificar</a>
+                    <a th:href="@{/auto/cambiar/__${auti.id}__}"><i></i>Modificar</a>
                 </td>
             </tr>
         </tbody>
