--- a/consesionaria/src/main/resources/templates/index.html
+++ b/consesionaria/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     </header>
 
 
-    <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError"> i
+    <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError"> 
         <div class="card-body">
             <h5 class="card-title">Error</h5>
             <p class="card-text" th:text="${error}"></p>
