--- a/concesionaria/src/main/resources/templates/inicio.html
+++ b/concesionaria/src/main/resources/templates/inicio.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Este es el inicio</h1>
-
+    <h3 th:if="${session.usuariosession !=null}" th:text="'Hola '+ ${session.usuariosession.nombre}+'!'"></h3>
 
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
