--- a/concesionaria/src/main/resources/templates/registro.html
+++ b/concesionaria/src/main/resources/templates/registro.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <form class="formulario" th:action="@{/registro}" method="POST">
+    <form class="formulario" th:action="@{/registro}" method="POST" enctype="multipart/form-data">
 
 
         <div class="form-group my-3">
@@ -22,6 +22,9 @@
         </div>
         <div class="form-group my-3">
             <input type="email" class="form-control" name="email" placeholder="EMAIL" th:value="${email}">
+        </div>
+        <div class="form-group my-3">
+            <input type="file" class="form-control" name="archivo">
         </div>
 
         <div class="form-group my-3">
